syntax = "proto3";

package netsvr.multicastByBitmap;

option go_package = "internal/protocol;protocol";

//business向worker请求，根据包含session id的bitmap进行组播
message MulticastByBitmap {
  //bitmap对象序列化后的base64数据，网关需要反解才能得到具体的session id
  string sessionIds = 1;
  //需要发给客户的数据
  bytes data = 2;
}