syntax = "proto3";

package toServerMulticast;

option go_package = "./protocol/toServer/multicastByBitmap;multicastByBitmap";

//根据包含session id的bitmap进行组播
message MulticastByBitmap {
  //bitmap对象的序列化后的base64数据，网关需要反解才能得到具体的session id
  string SessionIdBitmap = 1;
  //转发给用户的数据
  bytes data = 2;
}